--- a/package/crossplane.yaml
+++ b/package/crossplane.yaml
@@ -1,8 +1,7 @@
 apiVersion: meta.pkg.crossplane.io/v1
 kind: Provider
 metadata:
-  namespace: crossplane-system
-  name: crossplane-provider-github
+  name: provider-github
   annotations:
     meta.crossplane.io/description: |
       The Krateo PlatformOps GitHub provider creates a git repository on GitHub if does not exists.
