--- a/examples/provider.yaml
+++ b/examples/provider.yaml
@@ -1,19 +1,7 @@
-apiVersion: pkg.crossplane.io/v1alpha1
-kind: ControllerConfig
-metadata:
-  name: debug-config
-spec:
-  args:
-    - --debug
----
 apiVersion: pkg.crossplane.io/v1
 kind: Provider
 metadata:
   name: krateo-provider-github
 spec:
   package: 'ghcr.io/krateoplatformops/provider-github:VERSION'
-  packagePullPolicy: Always
-  packagePullSecrets:
-  - name: cr-token
-  controllerConfigRef:
-    name: debug-config
+  packagePullPolicy: IfNotPresent
