--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -15,27 +15,40 @@ jobs:
       - name: Git Checkout
         uses: actions/checkout@v3
 
-      - name: Build Controller
-        run: make image.build
-      
-      - name: Login to CR
-        uses: docker/login-action@v1
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Push Controller
-        run: make image.push
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      
-      - name: Store version tag
-        run: echo "::set-output name=VERSION_TAG::$(git describe --dirty --always --tags | sed 's/-/./2' | sed 's/-/./2' )"
+      - name: Extract Version
         id: tagger
+        uses: battila7/get-version-action@v2
+        
+      - name: Print Version
+        run: |
+          echo ${{steps.tagger.outputs.version}}
+          echo ${{steps.tagger.outputs.version-without-v}}
+      
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Login to CR
+        uses: docker/login-action@v2
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      
+      - name: Build docker image and push
+        id: docker_build
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          platforms: linux/amd64
+          tags: ${{ env.REGISTRY }}/${{ github.repository }}-controller:${{steps.tagger.outputs.version}}
+          build-args: |
+            ${{steps.tagger.outputs.version}}
 
       - name: Replace Version in xpkg manifest
-        run: sed -i 's/VERSION/${{ steps.tagger.outputs.VERSION_TAG }}/g' package/crossplane.yaml
+        run: sed -i 's/VERSION/${{ steps.tagger.outputs.version }}/g' package/crossplane.yaml
       
       - name: Build Crossplane Package
         uses: crossplane-contrib/xpkg-action@master
@@ -47,4 +60,4 @@ jobs:
       - name: Push Crossplane Package
         uses: crossplane-contrib/xpkg-action@master
         with:
-          command: push provider -f package/${{ github.event.repository.name }}.xpkg ghcr.io/${{ github.event.repository.owner.name }}/${{ github.event.repository.name }}:${{ steps.tagger.outputs.VERSION_TAG }}
+          command: push provider -f package/${{ github.event.repository.name }}.xpkg ghcr.io/${{ github.event.repository.owner.name }}/${{ github.event.repository.name }}:${{ steps.tagger.outputs.version }}
