--- a/examples/provider.yaml
+++ b/examples/provider.yaml
@@ -1,8 +1,18 @@
+apiVersion: pkg.crossplane.io/v1alpha1
+kind: ControllerConfig
+metadata:
+  name: debug-config
+spec:
+  args:
+    - --debug
+---
 apiVersion: pkg.crossplane.io/v1
 kind: Provider
 metadata:
   namespace: crossplane-system
-  name: krateo-provider-github
+  name: provider-github
 spec:
   package: 'ghcr.io/krateoplatformops/provider-github:VERSION'
   packagePullPolicy: IfNotPresent
+  controllerConfigRef:
+    name: debug-config
